# dlang-docs

./: .gitignore  01-primitive-types.html  02-text-literals.html  03-arithmetic-operators.html  04-variables-and-scope.html  05-conditionals.html  06-loops.html  07-arrays-and-lists.html  08-maps-and-dictionaries.html  09-functions.html  10-parameter-passing.html  11-multiple-returns.html  12-pointers-and-references.html  13-manual-memory.html  14-garbage-collection.html  14a-memory-safety.html  15-error-handling.html  16-enumerations.html  17-structs.html  18-dynamic-allocation.html  19-modules-and-namespaces.html  20-classes-and-objects.html  21-constructors-and-destructors.html  22-encapsulation.html  23-single-inheritance.html  24-multiple-inheritance.html  25-interfaces.html  26-polymorphism.html  27-operator-overloading.html  28-virtual-methods.html  29-static-typing.html  30-dynamic-typing.html  31-type-inference.html  32-generics.html  33-function-pointers.html  34-closures.html  35-higher-order-functions.html  36-lazy-evaluation.html  37-pattern-matching.html  38-tuples-and-destructuring.html  (+18 more)
dlang-pygments/: dlang_lexer.py  pyproject.toml
pt/: 01-primitive-types.html  02-text-literals.html  03-arithmetic-operators.html  04-variables-and-scope.html  05-conditionals.html  06-loops.html  07-arrays-and-lists.html  08-maps-and-dictionaries.html  09-functions.html  10-parameter-passing.html  11-multiple-returns.html  12-pointers-and-references.html  13-manual-memory.html  14-garbage-collection.html  14a-memory-safety.html  15-error-handling.html  16-enumerations.html  (+36 more)
(+109 files in other folders)
